[package]
name = "matrix_operations"
version = "0.1.4"
authors = ["arnaud111"]
edition = "2021"
description = "A library to perform matrix operations"
license = "MIT"
repository = "https://github.com/arnaud111/matrix_operations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
